# templ

./: CMakeLists.txt  COPYING  README.md
include/: CMakeLists.txt  hello_sayer.h  hello_sayer.hpp
src/: CMakeLists.txt  hello_sayer.cc  hello_sayer.cpp
test/: CMakeLists.txt  hello_sayer_test.cpp  test_main.cc
